add the new section and fix phone

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <ul class="header-menu">
                         <li><a href="#advantages">Преимущества</a></li>
                         <li><a href="#program">Программа</a></li>
+                        <li><a href="#gallery">Галерея</a></li>
                         <li><a href="#reviews">Отзывы</a></li>
                         <li><a href="#contacts">Контакты</a></li>
                     </ul>
@@ -76,16 +77,17 @@
                 понимаете.”, “Учёба — это не обязательство. Это возможность стать тем, кем ты хочешь
                 быть.”, “Учи других так, как хотел бы, чтобы учили тебя.” Любимые книги - “Искусство
                 обучать”, “Чистый python”, “Python к вершинам мастерства”, “Грокаем алгоритмы”,
-                “Договориться не проблема”, “Самурай без меча” Любимые цитаты - “Если вы не можете
-                объяснить что-то просто, вы сами этого не понимаете.”, “Учёба — это не
-                обязательство. Это возможность стать тем, кем ты хочешь быть.”, “Учи других так, как
-                хотел бы, чтобы учили тебя.” Любимые книги - “Искусство обучать”, “Чистый python”,
-                “Python к вершинам мастерства”, “Грокаем алгоритмы”, “Договориться не проблема”,
-                “Самурай без меча” Любимые цитаты - “Если вы не можете объяснить что-то просто, вы
-                сами этого не понимаете.”, “Учёба — это не обязательство. Это возможность стать тем,
-                кем ты хочешь быть.”, “Учи других так, как хотел бы, чтобы учили тебя.” Любимые
-                книги - “Искусство обучать”, “Чистый python”, “Python к вершинам мастерства”,
-                “Грокаем алгоритмы”, “Договориться не проблема”, “Самурай без меча”
+                “Договориться не проблема”, “Самурай без меча”, манга "GTO Крутой учитель Онидзука"
+                Любимые цитаты - “Если вы не можете объяснить что-то просто, вы сами этого не
+                понимаете.”, “Учёба — это не обязательство. Это возможность стать тем, кем ты хочешь
+                быть.”, “Учи других так, как хотел бы, чтобы учили тебя.” Любимые книги - “Искусство
+                обучать”, “Чистый python”, “Python к вершинам мастерства”, “Грокаем алгоритмы”,
+                “Договориться не проблема”, “Самурай без меча”, манга "GTO Крутой учитель Онидзука"
+                Любимые цитаты - “Если вы не можете объяснить что-то просто, вы сами этого не
+                понимаете.”, “Учёба — это не обязательство. Это возможность стать тем, кем ты хочешь
+                быть.”, “Учи других так, как хотел бы, чтобы учили тебя.” Любимые книги - “Искусство
+                обучать”, “Чистый python”, “Python к вершинам мастерства”, “Грокаем алгоритмы”,
+                “Договориться не проблема”, “Самурай без меча”, манга "GTO Крутой учитель Онидзука"
             </p>
         </div>
 
@@ -394,7 +396,7 @@
                 <h2 class="section-title section3-title">
                     ОТЗЫВЫ <span>УЧЕНИКОВ</span> И <span>РОДИТЕЛЕЙ</span>
                 </h2>
-                <div class="glide">
+                <div class="glide glide-primary">
                     <div class="glide__track" data-glide-el="track">
                         <ul class="glide__slides">
                             <li class="glide__slide">
@@ -477,9 +479,183 @@
                 <p class="section4-text">
                     Занятия доступны как <span>онлайн</span> так и
                     <span>офлайн в Новосибирске</span>, а на первое занятие
-                    <span>вы получите скидку 50%</span> от изначальной цены - 8$ в час. А при оплате
-                    занятий <span>за месяц скидка составит 25%.</span>
+                    <span>вы получите скидку 50%</span> от изначальной цены - 10$ в час. А при
+                    оплате занятий <span>за месяц скидка составит 25%.</span>
                 </p>
+            </section>
+
+            <section id="gallery" class="section6 section">
+                <h2 class="section-title section6-title">ГАЛЕРЕЯ <span>ВДОХНОВЕНИЙ</span></h2>
+                <div class="glide glide-secondary">
+                    <div class="glide__track" data-glide-el="track">
+                        <ul class="glide__slides">
+                            <li class="glide__slide">
+                                <img src="./img/our_work/our_work (1).png" alt="отзыв" />
+                                <h3>
+                                    Работа ученика: телеграм бот, для игры в камень, ножницы, бумага
+                                </h3>
+                                <p>
+                                    Отличная работа ученика над созданием телеграм-бота для игры в
+                                    камень, ножницы, бумага! Проект показывает глубокое понимание
+                                    основ Python, умение работать с библиотекой Telebot и грамотное
+                                    использование логики для обработки игровых ходов.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/my_photo/photo (7).jpg" alt="отзыв" />
+                                <h3>Немного обо мне: путешествия</h3>
+                                <p>
+                                    Это мой способ вдохновляться и учиться видеть мир шире. Каждая
+                                    поездка, даже в соседний город, — это новые открытия, истории и
+                                    эмоции. Путешествия сильно наполняют энергией и помогает ценить
+                                    каждый момент жизни еще больше.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/our_work/our_work (5).png" alt="отзыв" />
+                                <h3>Работа ученика: приложение "Шашки"</h3>
+                                <p>
+                                    Сложная работа ученика по созданию приложения 'Шашки' с
+                                    использованием библиотеки Tkinter! Проект демонстрирует глубокое
+                                    понимание продвинутого Python, умение работать с игровыми
+                                    алгоритмами и логику реализации сложных игровых механик.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/my_photo/photo (19).jpg" alt="отзыв" />
+                                <h3>Немного обо мне: семейная жизнь</h3>
+                                <p>
+                                    Мой источник мотивации и силы. Моя жена Виктория — лучший друг и
+                                    прекрасный спутник. Мы вместе уже больше 4 лет, и каждый день с
+                                    ней — это маленькое счастье. Она мотивирует меня стремиться к
+                                    большему, поддерживает в сложные моменты и верит в меня, даже
+                                    когда я сомневаюсь в себе.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/our_work/our_work (3).png" alt="отзыв" />
+                                <h3>Работа ученика: визуальная навела с мини играми</h3>
+                                <p>
+                                    Огромный проект ученика над визуальной новеллой с мини-играми на
+                                    Ren'Py! Приложение сочетает увлекательные игры, такие как 'Найди
+                                    все предметы' и 'Крестики-нолики', с интерактивным и стильным
+                                    интерфейсом. Ученик показал хорошие навыки в разработке на
+                                    Ren'Py, создании динамичных сцен и интеграции логики игр.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/my_photo/photo (8).png" alt="отзыв" />
+                                <h3>Немного обо мне: преподавательский опыт</h3>
+                                <p>
+                                    Преподавательский опыт включает в себя индивидуальные онлайн
+                                    занятия и опыт работы с группами учеников. А так же работу в
+                                    международной школе Cоddy. В настоящее время я сосредоточился на
+                                    индивидуальных занятиях, поскольку они позволяют лучше учитывать
+                                    особенности каждого студента и обеспечивают более высокий
+                                    результат.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/our_work/our_work (9).png" alt="отзыв" />
+                                <h3>Работа ученика: аналог paint на tkinter</h3>
+                                <p>
+                                    Прекрасная работа ученика по созданию аналога Paint с
+                                    использованием Tkinter! Это приложение позволяет рисовать,
+                                    менять цвета и создавать простые графические произведения прямо
+                                    в окне программы. Ученик продемонстрировал отличное владение
+                                    Tkinter, реализовав интуитивно понятный интерфейс и продуманную
+                                    функциональность.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/my_photo/photo (11).png" alt="отзыв" />
+                                <h3>Немного обо мне: убеждения</h3>
+                                <p>
+                                    Мои убеждения в преподавании основаны на том, что занятия должны
+                                    быть не только эффективными, но и интересными. Я искренне
+                                    считаю, что мотивация через поощрения гораздо более продуктивна.
+                                    Ошибки — это не что-то плохое, а важная часть процесса обучения,
+                                    и я всегда стараюсь напоминать своим ученикам, что важно учиться
+                                    на них. Много вопросов — это отлично, ведь каждый вопрос
+                                    приближает нас к пониманию и помогает расти. И напоследок -
+                                    важно создавать атмосферу, где ученик чувствует себя уверенно и
+                                    не боится искать ответы.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/our_work/our_work (4).png" alt="отзыв" />
+                                <h3>Работа ученика: сайт на Django</h3>
+                                <p>
+                                    Шикарный проект ученицы по созданию сайта на Django! Проект
+                                    демонстрирует уверенные навыки в веб-разработке: создание
+                                    функциональных страниц, работа с базами данных и интеграция
+                                    различных компонентов. Ученик проявил творческий подход,
+                                    организовав структуру сайта и обеспечив удобный интерфейс, что
+                                    делает проект достойным примером практического применения знаний
+                                    Django.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/my_photo/photo (17).jpg" alt="отзыв" />
+                                <h3>Немного обо мне: мысли о обучении</h3>
+                                <p>
+                                    В прошлом, большую часть своего времени я отдавал
+                                    пожарно-спасательном спорту. Мой тогдашний наставник -
+                                    Александр, стал для меня не только тренером, но и важным
+                                    человеком в жизни, почти как второй отец. Он не только помог мне
+                                    расти как спортсмену, но и мотивировал на правильные поступки.
+                                    Учил принимать ошибки и поражения. Не сдаваться и двигаться
+                                    вперед. Тогда я и осознал, что учитель/тренер не только может
+                                    научить чему-то, но и оказать огромное влияние в формировании
+                                    человека, как сильной личности. Кстати, именно он порекомендовал
+                                    мне мангу 'Крутой учитель Онидзука', которая стала моей любимой
+                                    и оказала немалое влияние на мое мировоззрение.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/our_work/our_work (6).png" alt="отзыв" />
+                                <h3>Работа ученика: игра "гонки" на pygame</h3>
+                                <p>
+                                    Отличная работа ученика по созданию игры-гонки на Pygame! Проект
+                                    продемонстрировал отличное использование
+                                    объектно-ориентированного программирования (ООП), где каждая
+                                    часть игры, от машин до трасс, была представлена как отдельный
+                                    класс с собственными методами и атрибутами. Ученик грамотно
+                                    организовал структуру кода, обеспечив его расширяемость и
+                                    поддержку.
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/my_photo/photo (18).png" alt="отзыв" />
+                                <h3>Немного обо мне: мое обучение</h3>
+                                <p>
+                                    Мое обучение началось с YouTube, но я столкнулся с множеством
+                                    ошибок и проблем, с которыми никто не мог мне помочь, вдобавок я
+                                    понял, что без домашней работы сложно закрепить знания. Поэтому
+                                    я решил продолжить обучение на курсах, и это оказалось неплохим
+                                    решением. Однако, оглядываясь назад, понимаю, что лучшим выбором
+                                    могли бы стать индивидуальные занятия. Это позволило бы мне
+                                    быстрее и глубже понять материал, учитывая мой темп и
+                                    особенности восприятия. Так же хочу отметить, что я продолжаю
+                                    учиться и сейчас, прохожу различные курсы и тренинги. Как сказал
+                                    Ричард Генри Данн, 'Тот, кто обучает, должен всегда продолжать
+                                    учиться сам.'
+                                </p>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="./img/our_work/our_work (7).png" alt="отзыв" />
+                                <h3>Работа ученика: игра на pygame</h3>
+                                <p>
+                                    Интересный проект ученицы по созданию игры на Pygame! Игра
+                                    включает в себя несколько уровней, в который мы должны побеждать
+                                    противников в космосе. Проект демонстрирует отличные навыки
+                                    Python и pygame в частности, а так же отличное понимание
+                                    принципов ООП и умения реализовать логику движения ботов.
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </section>
 
             <section id="contacts" class="section5 section">
@@ -506,8 +682,12 @@
                     </p>
                     <div class="phone-number">
                         <a href="mailto:danilabezhin@gmail.com">danilabezhin@gmail.com</a>
-                        <a href="tel:+79956898613">+7 (995) 689-86-13</a>
-                        <!-- <a href="tel:+79955702188">+7 (995) 570-21-88</a> -->
+                        <a class="section5-step-phone-for-whatsapp" href="tel:+79956898613"
+                            >+7 (995) 689-86-13</a
+                        >
+                        <a class="section5-step-phone-for-telegram" href="tel:+79955702188"
+                            >+7 (995) 570-21-88</a
+                        >
                     </div>
                     <div class="section5-step section5-step2">
                         <span
