--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                                 <h3>Немного обо мне: мысли о обучении</h3>
                                 <p>
                                     В прошлом, большую часть своего времени я отдавал
-                                    пожарно-спасательном спорту. Мой тогдашний наставник -
+                                    пожарно-спасательному спорту. Мой тогдашний наставник -
                                     Александр, стал для меня не только тренером, но и важным
                                     человеком в жизни, почти как второй отец. Он не только помог мне
                                     расти как спортсмену, но и мотивировал на правильные поступки.
