--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                             </li>
                             <li class="glide__slide">
                                 <img src="./img/our_work/our_work (3).png" alt="отзыв" />
-                                <h3>Работа ученика: визуальная навела с мини играми</h3>
+                                <h3>Работа ученика: визуальная новелла с мини играми</h3>
                                 <p>
                                     Огромный проект ученика над визуальной новеллой с мини-играми на
                                     Ren'Py! Приложение сочетает увлекательные игры, такие как 'Найди
