--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
 
                             <p>Предпочитаемый способ связи</p>
                             <div class="section5-checkbox">
-                                <div>
+                                <div class="form-margin-left"> 
                                     <input
                                         type="checkbox"
                                         id="contactChoice1"
@@ -830,7 +830,7 @@
                                     <label for="contactChoice1">Телефонный звонок</label>
                                 </div>
 
-                                <div>
+                                <div class="form-margin-left">
                                     <input
                                         type="checkbox"
                                         id="contactChoice2"
@@ -840,7 +840,7 @@
                                     <label for="contactChoice2">Telegram</label>
                                 </div>
 
-                                <div>
+                                <div class="form-margin-left">
                                     <input
                                         type="checkbox"
                                         id="contactChoice3"
@@ -848,6 +848,19 @@
                                         value="WhatsApp"
                                     />
                                     <label for="contactChoice3">WhatsApp</label>
+                                </div>
+
+                            </div>
+                            <p>Согласие на обработку персональных данных</p>
+                            <div>
+                                <div class="form-margin-left">
+                                    <input
+                                        type="checkbox"
+                                        id="personal_data"
+                                        name="personal_data"
+                                        required
+                                    />
+                                    <label id="personal_data" for="personal_data">Я даю согласие на обработку моих персональных данных</label>
                                 </div>
                             </div>
                             <input class="section5-submit" type="submit" value="Оставить заявку" />
@@ -878,6 +891,14 @@
                     <a href="mailto:danilabezhin@gmail.com">danilabezhin@gmail.com</a>
                 </div>
             </div>
+            <div class="footer-docs-line container"></div>
+            <div class="footer-docs container">
+                <a href="./docs/privacy_policy.html">Политика конфиденциальности</a>
+                <a href="./docs/user_agreement.html">Пользовательское соглашение</a>
+                <a href="./docs/terms_of_use.html">Согласия на обработку персональных данных</a>
+                <a href="./docs/contact.html">Контакты</a>
+            </div>
+            <div class="footer-docs-line container"></div>
             <div class="footer-copyright container">
                 <p>
                     © Green School 2019-2025 Все права защищены. Перепечатка и цитирование
