--- a/pages/books.html
+++ b/pages/books.html
@@ -6,7 +6,7 @@
         <title>Задачник по Python</title>
         <link rel="icon" href="./../img/logo.svg" type="image/svg+xml" />
         <link rel="stylesheet" href="./../style/reset.css" />
-        <link rel="stylesheet" href="../../style/var.css" />
+        <link rel="stylesheet" href="./../style/var.css" />
         <link rel="stylesheet" href="./../style/style.css" />
         <link rel="stylesheet" href="./../style/style_for_books.css" />
     </head>
