--- a/pages/books.html
+++ b/pages/books.html
@@ -9,6 +9,16 @@
         <link rel="stylesheet" href="./../style/var.css" />
         <link rel="stylesheet" href="./../style/style.css" />
         <link rel="stylesheet" href="./../style/style_for_books.css" />
+
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+        ></script>
+        <script type="text/javascript">
+            (function () {
+                emailjs.init('QPDOvvLyLeJ5Lkh0P');
+            })();
+        </script>
     </head>
     <body>
         <header class="header">
