--- a/pages/books.html
+++ b/pages/books.html
@@ -73,11 +73,10 @@
 
                     <p class="section2-text section2-text-info">
                         После завершения оплаты на вашу электронную почту, указанную при оформлении
-                        заказа, будут отправлены 2 файла, сам задачник и файл с ответами и
-                        пояснениями к задачам. Это цифровые файлы, которые вы сможете скачать сразу
-                        после оплаты. Убедитесь, что указали корректный адрес электронной почты при
-                        оформлении заказа. Если письмо не пришло в течение нескольких минут,
-                        проверьте папку "Спам" или обратитесь <a href="./../docs/contact.html">к нам</a> за помощью 
+                        заказа, будет отправлена ссылка для скачивание, самого задачника и файла.
+                        Убедитесь, что указали корректный адрес электронной почты при оформлении
+                        заказа. Если письмо не пришло в течение нескольких минут, проверьте папку
+                        "Спам" или обратитесь <a href="./../docs/contact.html">к нам</a> за помощью
                     </p>
                     <!-- 
                     <div class="discount-block">
@@ -89,12 +88,13 @@
 
                     <form id="payment-form">
                         <label for="email">Ваш Email:</label>
-                        <input type="email" id="email" required>
+                        <input type="email" id="email" required />
                         <button type="submit" class="buy-button">Купить за 749₽</button>
                     </form>
-                    
+
                     <p class="section2-text section2-text-info">
-                        Нажимая «Купить», вы принимаете условия <a href="./../docs/offer_afree.html" target="_blank">договора оферты</a>.
+                        Нажимая «Купить», вы принимаете условия
+                        <a href="./../docs/offer_afree.html" target="_blank">договора оферты</a>.
                     </p>
                 </div>
                 <!-- Позже сюда подключается система оплаты -->
@@ -107,8 +107,7 @@
                 <div class="reviews">
                     <div class="review">
                         <p>
-                            “Прошла за неделю — теперь не боюсь сессии! Очень доступно и по
-                            делу.”
+                            “Прошла за неделю — теперь не боюсь сессии! Очень доступно и по делу.”
                         </p>
                         <span>— Анна, студентка</span>
                     </div>
@@ -124,19 +123,22 @@
                     </div>
                     <div class="review">
                         <p>
-                            “Долго боялся начать программировать, думал, что это слишком сложно. Но эти задания реально подходят для полного нуля!”
+                            “Долго боялся начать программировать, думал, что это слишком сложно. Но
+                            эти задания реально подходят для полного нуля!”
                         </p>
                         <span>— Иван, студент-экономист</span>
                     </div>
                     <div class="review">
                         <p>
-                            “После работы сил нет на сложные курсы, а тут разбираю по 1-2 задачи в день — и уже вижу результат. Лучше, чем зубрить теорию!”
+                            “После работы сил нет на сложные курсы, а тут разбираю по 1-2 задачи в
+                            день — и уже вижу результат. Лучше, чем зубрить теорию!”
                         </p>
                         <span>— Ольга, бухгалтер</span>
                     </div>
                     <div class="review">
                         <p>
-                            “Наконец-то понял основы без лишней сложности. Теперь могу сам писать простые скрипты и даже поправил баг в коде коллеги!”
+                            “Наконец-то понял основы без лишней сложности. Теперь могу сам писать
+                            простые скрипты и даже поправил баг в коде коллеги!”
                         </p>
                         <span>— Артем, начинающий разработчик</span>
                     </div>
