style for books page

--- a/index.html
+++ b/index.html
@@ -921,10 +921,10 @@
             </div>
             <div class="footer-docs-line container"></div>
             <div class="footer-docs container">
-                <a href="./docs/privacy_policy.html">Политика конфиденциальности</a>
-                <a href="./docs/user_agreement.html">Пользовательское соглашение</a>
-                <a href="./docs/terms_of_use.html">Согласия на обработку персональных данных</a>
-                <a href="./docs/contact.html">Контакты</a>
+                <a target="_blank" href="./docs/privacy_policy.html">Политика конфиденциальности</a>
+                <a target="_blank" href="./docs/user_agreement.html">Пользовательское соглашение</a>
+                <a target="_blank" href="./docs/terms_of_use.html">Согласия на обработку персональных данных</a>
+                <a target="_blank" href="./docs/contact.html">Контакты</a>
             </div>
             <div class="footer-docs-line container"></div>
             <div class="footer-copyright container">
