--- a/pages/books.html
+++ b/pages/books.html
@@ -87,8 +87,10 @@
                     </div> -->
 
                     <form id="payment-form">
-                        <label for="email">Ваш Email:</label>
-                        <input type="email" id="email" required />
+                        <div class="form-group">
+                            <label for="email">Ваш Email:</label>
+                            <input type="email" id="email" required />
+                        </div>
                         <button type="submit" class="buy-button">Купить за 749₽</button>
                     </form>
 
@@ -161,10 +163,10 @@
             </div>
             <div class="footer-docs-line container"></div>
             <div class="footer-docs container">
-                <a href="./../docs/privacy_policy.html">Политика конфиденциальности</a>
-                <a href="./../docs/user_agreement.html">Пользовательское соглашение</a>
-                <a href="./../docs/terms_of_use.html">Согласия на обработку персональных данных</a>
-                <a href="./../docs/contact.html">Контакты</a>
+                <a target="_blank" href="./../docs/privacy_policy.html">Политика конфиденциальности</a>
+                <a target="_blank" href="./../docs/user_agreement.html">Пользовательское соглашение</a>
+                <a target="_blank" href="./../docs/terms_of_use.html">Согласия на обработку персональных данных</a>
+                <a target="_blank" href="./../docs/contact.html">Контакты</a>
             </div>
             <div class="footer-docs-line container"></div>
             <div class="footer-copyright container">
