style for books page

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </script>
     </head>
     <body>
-        <div class="preloader">
+        <!-- <div class="preloader">
             <div class="spinner"></div>
-        </div>
+        </div> -->
         <header class="header">
             <div class="container">
                 <nav>
@@ -95,7 +95,7 @@
             <div class="container">
                 <section class="unheader">
                     <div class="unheader-left unheader-section">
-                        <div data-aos="fade-up" data-aos-duration="700" data-aos-delay="700">
+                        <div data-aos="fade-up" data-aos-duration="700" data-aos-delay="900">
                             <img class="unheader-logo" src="./img/logo.svg" alt="Логотип листок" />
                             <h1>GREEN SCHOOL</h1>
                             <p class="unheader-text">
@@ -108,6 +108,7 @@
                             data-aos="fade-down-left"
                             data-aos-duration="1000"
                             class="unheader-comment"
+                            data-aos-delay="300"
                         >
                             <img src="./img/comment.svg" alt="Иконка цитаты" />
                             <p class="unheader-comment-text">
@@ -118,7 +119,11 @@
                         </blockquote>
                     </div>
                     <div class="unheader-right unheader-section">
-                        <img class="unheader-author-photo" src="./img/person.webp" alt="Фотография учителя" />
+                        <img
+                            class="unheader-author-photo"
+                            src="./img/person.webp"
+                            alt="Фотография учителя"
+                        />
                         <div class="unheader-authorname">
                             <a href="./pages/books.html"
                                 ><img
@@ -923,7 +928,9 @@
             <div class="footer-docs container">
                 <a target="_blank" href="./docs/privacy_policy.html">Политика конфиденциальности</a>
                 <a target="_blank" href="./docs/user_agreement.html">Пользовательское соглашение</a>
-                <a target="_blank" href="./docs/terms_of_use.html">Согласия на обработку персональных данных</a>
+                <a target="_blank" href="./docs/terms_of_use.html"
+                    >Согласия на обработку персональных данных</a
+                >
                 <a target="_blank" href="./docs/contact.html">Контакты</a>
             </div>
             <div class="footer-docs-line container"></div>
