--- a/pages/books.html
+++ b/pages/books.html
@@ -96,7 +96,9 @@
 
                     <p class="section2-text section2-text-info">
                         Нажимая «Купить», вы принимаете условия
-                        <a href="./../docs/offer_afree.html" target="_blank">договора оферты</a>.
+                        <a target="_blank" href="./../docs/offer_afree.html" target="_blank"
+                            >договора оферты</a
+                        >.
                     </p>
                 </div>
                 <!-- Позже сюда подключается система оплаты -->
@@ -163,9 +165,15 @@
             </div>
             <div class="footer-docs-line container"></div>
             <div class="footer-docs container">
-                <a target="_blank" href="./../docs/privacy_policy.html">Политика конфиденциальности</a>
-                <a target="_blank" href="./../docs/user_agreement.html">Пользовательское соглашение</a>
-                <a target="_blank" href="./../docs/terms_of_use.html">Согласия на обработку персональных данных</a>
+                <a target="_blank" href="./../docs/privacy_policy.html"
+                    >Политика конфиденциальности</a
+                >
+                <a target="_blank" href="./../docs/user_agreement.html"
+                    >Пользовательское соглашение</a
+                >
+                <a target="_blank" href="./../docs/terms_of_use.html"
+                    >Согласия на обработку персональных данных</a
+                >
                 <a target="_blank" href="./../docs/contact.html">Контакты</a>
             </div>
             <div class="footer-docs-line container"></div>
